edited dockerfile